# UCourseComputerNetworks

Lab1/: README.md
Lab1/client/: CMakeLists.txt  main.cpp
Lab1/server/: CMakeLists.txt  combinatorics.h  main.cpp
Lab2/: Lab2Otchet.docx  README.md
Lab2/client/: main.cpp
Lab2/server/: CMakeLists.txt  main.cpp
Lab3/: Lab_3_Otchet.docx  README.md
Lab3/client/: CMakeLists.txt  main.cpp  tcp_client.h
Lab3/server/: CMakeLists.txt  main.cpp  students.h  tcp_server.h  thread_info.h
Lab4/: README.md  config.sh  logs.txt  start_server.sh
Lab4/client/: CMakeLists.txt  main.cpp  tcp_client.h
Lab4/server/: CMakeLists.txt  combinatorics.h  file_handler.h  log.h  main.cpp  students.h  tcp_server.h
Lab4/server-communication/: CMakeLists.txt  main.cpp
Lab5-7/: Lab8.docx  Лаба7Отчет.docx
